<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.UserFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/enterNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/please_enter_your_name"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/changeTitleButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/change_title" />

    <Button
        android:id="@+id/toastButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/show_toast" />

    <Button
        android:id="@+id/snackButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/show_snack" />

    <Button
        android:id="@+id/notificationButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/send_notification" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/btn_margin"
        android:text="@string/next" />

</LinearLayout>